@@ -1,0 +1,9 @@
+Title: fortigate_node: Memory on fortigate clusters are now configurable by WATO
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i2
+Date: 1476117532
+Class: feature
+
+Memory on fortigate clusters are now configurable by WATO similar to other memory checks.
